# ecosystem

./: Cargo.toml  README.md  cliff.toml  test.rest
examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  chat.rs  chat_refactor.rs  enum.rs  error.rs  minginx.rs  more.rs  serde.rs  serde1.rs  shortener.rs  shortener_refactor.rs  tokio_demo.rs  tokio_demo1.rs
examples/shortener_refactor/: .env  Cargo.toml
examples/shortener_refactor/migrations/: 20240604_urls.sql
examples/shortener_refactor/src/: error.rs  lib.rs  main.rs  server.rs  state.rs
src/: error.rs  main.rs
tests/: loom.rs
